--- a/views/survey_question_templates.xml
+++ b/views/survey_question_templates.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <!-- Define the match following question template -->
+    <!-- Template for match following question -->
     <template id="question_match_following" name="Match Following Question">
         <div class="o_survey_match_following_wrapper" t-att-data-question-id="question.id">
             <div class="row">
                 <div class="col-md-6">
                     <h5>Items</h5>
-                    <div class="o_match_questions" t-att-data-question-id="question.id"/>
+                    <div class="o_match_questions p-2 border rounded bg-light" t-att-data-question-id="question.id">
+                        <t t-foreach="question.match_following_pairs" t-as="pair">
+                            <div class="o_match_item mb-2 p-2 border rounded bg-white" 
+                                 t-att-data-pair-id="pair.id">
+                                <t t-esc="pair.left_option"/>
+                            </div>
+                        </t>
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <h5>Match With</h5>
-                    <div class="o_match_answers" t-att-data-question-id="question.id"/>
+                    <div class="o_match_answers p-2 border rounded bg-light">
+                        <t t-foreach="question.match_following_pairs" t-as="pair">
+                            <div class="o_match_item mb-2 p-2 border rounded bg-white" 
+                                 t-att-data-pair-id="pair.id">
+                                <t t-esc="pair.right_option"/>
+                            </div>
+                        </t>
+                    </div>
                 </div>
             </div>
-            <div class="text-muted mt-2 mb-3">
-                <small>Drag items from left to match with items on right.</small>
-            </div>
+            <input type="hidden" t-att-name="'question_%s' % question.id" value="[]"/>
         </div>
     </template>
 
-    <!-- Inherit question container as provided in the working example -->
+    <!-- Inherit survey question container -->
     <template id="question_container_inherit" inherit_id="survey.question_container">
         <xpath expr="." position="inside">
             <t t-if="question.question_type == 'match_following'" t-call="custom_elearn.question_match_following"/>
