--- a/views/survey_question_templates.xml
+++ b/views/survey_question_templates.xml
@@ -1,37 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <!-- Template for match following question -->
+    <!-- Template for the match following question -->
     <template id="question_match_following" name="Match Following Question">
         <div class="o_survey_match_following_wrapper" t-att-data-question-id="question.id">
             <div class="row">
                 <div class="col-md-6">
-                    <h5>Items</h5>
-                    <div class="o_match_questions p-2 border rounded bg-light" t-att-data-question-id="question.id">
-                        <t t-foreach="question.match_following_pairs" t-as="pair">
-                            <div class="o_match_item mb-2 p-2 border rounded bg-white" 
-                                 t-att-data-pair-id="pair.id">
-                                <t t-esc="pair.left_option"/>
-                            </div>
-                        </t>
+                    <div class="card mb-3">
+                        <div class="card-header bg-light">Items</div>
+                        <div class="o_match_questions card-body p-2">
+                            <t t-foreach="question.match_following_pairs" t-as="pair">
+                                <div class="o_match_item mb-2 p-2 border rounded bg-white" 
+                                     t-att-data-pair-id="pair.id">
+                                    <t t-esc="pair.left_option"/>
+                                </div>
+                            </t>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <h5>Match With</h5>
-                    <div class="o_match_answers p-2 border rounded bg-light">
-                        <t t-foreach="question.match_following_pairs" t-as="pair">
-                            <div class="o_match_item mb-2 p-2 border rounded bg-white" 
-                                 t-att-data-pair-id="pair.id">
-                                <t t-esc="pair.right_option"/>
-                            </div>
-                        </t>
+                    <div class="card mb-3">
+                        <div class="card-header bg-light">Match With</div>
+                        <div class="o_match_answers card-body p-2">
+                            <t t-foreach="question.match_following_pairs" t-as="pair">
+                                <div class="o_match_item mb-2 p-2 border rounded bg-white" 
+                                     t-att-data-pair-id="pair.id">
+                                    <t t-esc="pair.right_option"/>
+                                </div>
+                            </t>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="text-muted small mb-3">
+                <em>Drag items from left to match with items on right</em>
+            </div>
             <input type="hidden" t-att-name="'question_%s' % question.id" value="[]"/>
+            <style>
+                .o_match_item {
+                    transition: all 0.2s ease;
+                }
+                .o_match_questions .o_match_item {
+                    cursor: grab;
+                }
+                .o_match_item.matched {
+                    background-color: #d4edda !important;
+                    border-color: #c3e6cb !important;
+                }
+                .drop-zone-active {
+                    background-color: #e8f4ff !important;
+                    border: 2px dashed #b8daff !important;
+                }
+                .o_match_questions, .o_match_answers {
+                    min-height: 150px;
+                }
+            </style>
         </div>
     </template>
 
-    <!-- Inherit survey question container -->
+    <!-- Inherit the survey question container -->
     <template id="question_container_inherit" inherit_id="survey.question_container">
         <xpath expr="." position="inside">
             <t t-if="question.question_type == 'match_following'" t-call="custom_elearn.question_match_following"/>
