Refactor match following configuration and preview sections; update xpath for layout consistency, enhance visibility conditions, and improve overall structure.

--- a/views/survey_question_inherit_view.xml
+++ b/views/survey_question_inherit_view.xml
@@ -11,60 +11,57 @@
                 <field name="question_type" widget="radio" options="{'horizontal': true}"/>
             </field>
             
-            <!-- Add match following config section -->
-            <xpath expr="//div[@id='options']" position="inside">
-                <div invisible="question_type != 'match_following'" id="match_following_options">
-                    <div class="row mt16">
-                        <div class="col-lg-6">
-                            <label for="shuffle_left_options" string="Shuffle Left Options"/>
+            <!-- Add match following config section - updated xpath -->
+            <xpath expr="//notebook" position="inside">
+                <page string="Match Following Options" attrs="{'invisible': [('question_type', '!=', 'match_following')]}">
+                    <group>
+                        <group>
                             <field name="shuffle_left_options"/>
-                        </div>
-                        <div class="col-lg-6">
-                            <label for="shuffle_right_options" string="Shuffle Right Options"/>
                             <field name="shuffle_right_options"/>
-                        </div>
-                    </div>
-                    <div class="row mt16">
-                        <div class="col-lg-12">
-                            <label for="match_following_pairs" string="Match Pairs"/>
-                            <field name="match_following_pairs">
-                                <tree editable="bottom">
-                                    <field name="sequence" widget="handle"/>
-                                    <field name="left_option"/>
-                                    <field name="right_option"/>
-                                    <field name="score"/>
-                                </tree>
-                            </field>
-                        </div>
-                    </div>
-                </div>
+                        </group>
+                        <group>
+                            <!-- Empty to balance the layout -->
+                        </group>
+                    </group>
+                    <label for="match_following_pairs" string="Match Pairs"/>
+                    <field name="match_following_pairs">
+                        <tree editable="bottom">
+                            <field name="sequence" widget="handle"/>
+                            <field name="left_option"/>
+                            <field name="right_option"/>
+                            <field name="score"/>
+                        </tree>
+                    </field>
+                </page>
             </xpath>
             
             <!-- Add a preview tab for match following -->
-            <xpath expr="//div[@id='question_preview']" position="inside">
-                <div attrs="{'invisible': [('question_type', '!=', 'match_following')]}" class="mt16 o_preview">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h5>Items</h5>
-                            <div class="border p-2 rounded bg-light">
-                                <div t-foreach="5" t-as="i" class="mb-2 p-2 border rounded bg-white">
-                                    Item <t t-esc="i"/>
+            <xpath expr="//notebook" position="inside">
+                <page string="Match Following Preview" attrs="{'invisible': [('question_type', '!=', 'match_following')]}">
+                    <div class="mt16 o_preview">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h5>Items</h5>
+                                <div class="border p-2 rounded bg-light">
+                                    <div t-foreach="5" t-as="i" class="mb-2 p-2 border rounded bg-white">
+                                        Item <t t-esc="i"/>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <h5>Match With</h5>
+                                <div class="border p-2 rounded bg-light">
+                                    <div t-foreach="5" t-as="i" class="mb-2 p-2 border rounded bg-white">
+                                        Match <t t-esc="i"/>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <h5>Match With</h5>
-                            <div class="border p-2 rounded bg-light">
-                                <div t-foreach="5" t-as="i" class="mb-2 p-2 border rounded bg-white">
-                                    Match <t t-esc="i"/>
-                                </div>
-                            </div>
+                        <div class="text-muted small mt-2">
+                            <em>Drag items from left to match with items on right.</em>
                         </div>
                     </div>
-                    <div class="text-muted small mt-2">
-                        <em>Drag items from left to match with items on right.</em>
-                    </div>
-                </div>
+                </page>
             </xpath>
         </field>
     </record>
